Fixed distorcian in project's images on mobile version

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -137,6 +137,7 @@
         div.project {
             div.project-image{
                 img{
+                    height: auto;
                     max-width: 90vw;
                     max-height: 300px;
                 }
